--- a/ReparacionCoches/nbproject/private/private.properties
+++ b/ReparacionCoches/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PcVIP\\AppData\\Roaming\\NetBeans\\24\\build.properties
+user.properties.file=C:\\Users\\diego\\AppData\\Roaming\\NetBeans\\14\\build.properties
